# bicleaner-ai

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_mirrored.py
.claude/: settings.local.json
.claude/commands/: refresh_context.md  run_tests.md
.github/workflows/: pypi-publish.yml
app/: config.py  service.py
app/routers/: v1.py
bicleaner/: __init__.py  bicleaner_classifier.py  bicleaner_hardrules.py  bicleaner_train.py  classify.py  datagen.py  decomposable_attention.py  layers.py  losses.py  metrics.py  model.py  models.py  tokenizer.py  training.py  util.py
bicleaner_ai/: __init__.py  bicleaner_ai_classifier.py  bicleaner_ai_train.py  classify.py  datagen.py  decomposable_attention.py  layers.py  metrics.py  models.py  models_util.py  training.py  util.py
conda_build/: make_build.sh
conda_build/bicleaner-ai/: build.sh  meta.yaml
docs/: README.md  TRAINING.md  architecture.md  tech_stack.md
docs/project/: runbook.md
docs/reference/: README.md
docs/reference/adrs/: adr-001-ml-framework.md  adr-002-model-architecture.md
docs/reference/guides/: 01-model-training-patterns.md  testing-strategy.md
docs/tasks/: README.md  T001-project-structure-config-schemas.md  T002-bicleaner-service-model-wrapper.md  T003-fastapi-router-score-endpoint.md  T004-main-dockerfile.md  kanban_board.md
docs/training/: README.md  multilingual.md  step-by-step.md
scripts/: bicleaner-ai-classify  bicleaner-ai-download  bicleaner-ai-download-hf  bicleaner-ai-train  bicleaner-classify  run.bat  run.sh  score_file.py
sources/bicleaner-service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
sources/bicleaner-service/app/: __init__.py  config.py  main.py  schemas.py
sources/bicleaner-service/app/routers/: __init__.py
src/bicleaner_ai/: __init__.py  bicleaner_ai_classifier.py  bicleaner_ai_download.py  bicleaner_ai_download_hf.py  bicleaner_ai_generate_train.py  bicleaner_ai_sample.py  bicleaner_ai_train.py  calibrate.py  classify.py  datagen.py  decomposable_attention.py  layers.py  losses.py  metrics.py  models.py  noise_generation.py  tokenizer.py  training.py  util.py
tests/: README.md  bicleaner_ai_test.py  corpus.en-fr  dev.en-fr  mono.en-fr  test.en-fr  test_api.py  unit_test.py
utils/: download-pack.sh
