[project]
name = "bicleaner-ai"
version = "3.3.0"
license = {file = "LICENSE"}
authors = [
    { "name" = "Prompsit Language Engineering", "email" = "info@prompsit.com" }
]
maintainers = [
    { "name" = "Jaume Zaragoza", "email" = "jzaragoza@prompsit.com" }
]
description = "Parallel corpus classifier, indicating the likelihood of a pair of sentences being mutual translations or not (neural version)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "scikit-learn>=0.22.1",
    "PyYAML>=5.1.2",
    "numpy<2",
    "pytest",
    "toolwrapper",
    "joblib",
    "sacremoses",
    "bicleaner-hardrules==2.10.6",
    "sentencepiece",
    "protobuf==3.20.3",
    "tensorflow>=2.6.5,<2.16",
    "bicleaner-ai-glove==0.2.1",
    "fuzzywuzzy",
    "python-Levenshtein",
    "transformers==4.52.4",
    "huggingface-hub>=0.30,<0.31",
    "zstandard",
    "psutil",
    "regex",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Filters"
]

[project.optional-dependencies]
transliterate = [ "cyrtranslit==1.1" ]

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.scripts]
bicleaner-ai-train = "bicleaner_ai.bicleaner_ai_train:main"
bicleaner-ai-classify = "bicleaner_ai.bicleaner_ai_classifier:main"
bicleaner-ai-download = "bicleaner_ai.bicleaner_ai_download:main"
bicleaner-ai-download-hf = "bicleaner_ai.bicleaner_ai_download_hf:main"
bicleaner-ai-generate-train = "bicleaner_ai.bicleaner_ai_generate_train:main"
bicleaner-ai-sample = "bicleaner_ai.bicleaner_ai_sample:main"

[project_urls]
"Bicleaner on GitHub" = "https://github.com/bitextor/bicleaner"
"Prompsit Language Engineering" = "http://www.prompsit.com"
"Paracrawl" = "https://paracrawl.eu/"
"MaCoCu" = "https://macocu.eu/"
"HPLT Project" = "https://hplt-project.org"
